--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,20 @@
-Package: Koboconnect
+Package: KoboconnectR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Wrapper for Kobotools APIs, primarily to extract submitted data
+URL: https://asitav-sen/koboconnect/
+BugReports: https://github.com/asitav-sen/koboconnect/issues
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: person("Asitav ", "Sen", email = "7u90fioq2@relay.firefox.com",
+                  role = c("aut", "cre","cph"))
+Description: Wrapper for Kobotools APIs to download data from Kobotools to R.
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
+Imports:
+    httr,
+    jsonlite,
+    safer
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
