--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,14 +3,14 @@ Type: Package
 Title: Wrapper for Kobotools APIs, primarily to extract submitted data
 URL: https://asitav-sen/koboconnectR/
 BugReports: https://github.com/asitav-sen/koboconnectR/issues
-Version: 0.1.0
+Version: 1.0.0
 Authors@R: person("Asitav ", "Sen", email = "7u90fioq2@relay.firefox.com",
                   role = c("aut", "cre","cph"))
 Description: Wrapper for Kobotools APIs to download data from Kobotools to R.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Imports:
     httr,
     curl,
@@ -20,3 +20,5 @@ Imports:
     R6,
     methods
 Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
