--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,11 @@
 export(get_kobo_token)
 export(kobotools_api)
 export(kobotools_kpi_data)
+import(R6)
+import(curl)
+import(methods)
+import(mime)
+import(openssl)
 importFrom(httr,GET)
 importFrom(httr,add_headers)
 importFrom(httr,authenticate)
