--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(kobotools_api)
 export(kobotools_kpi_data)
 import(R6)
 import(curl)
+import(dplyr)
 import(methods)
 import(mime)
 import(openssl)
