--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,10 @@ importFrom(httr,POST)
 importFrom(httr,add_headers)
 importFrom(httr,authenticate)
 importFrom(httr,content)
+importFrom(httr,message_for_status)
 importFrom(httr,progress)
 importFrom(httr,stop_for_status)
+importFrom(httr,timeout)
 importFrom(httr,warn_for_status)
 importFrom(jsonlite,fromJSON)
 importFrom(utils,read.csv)
