--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(get_kobo_token)
 export(kobo_df_download)
 export(kobo_export_create)
 export(kobo_exports)
+export(kobo_media_downloader)
+export(kobo_xls_dl)
 export(kobotools_api)
 export(kobotools_kpi_data)
 import(R6)
@@ -24,4 +26,6 @@ importFrom(httr,stop_for_status)
 importFrom(httr,timeout)
 importFrom(httr,warn_for_status)
 importFrom(jsonlite,fromJSON)
+importFrom(readxl,read_excel)
+importFrom(utils,download.file)
 importFrom(utils,read.csv)
