--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Download Data from Kobotoolbox to R
 URL: https://github.com/asitav-sen/KoboconnectR
 BugReports: https://github.com/asitav-sen/koboconnectR/issues
-Version: 1.1.1
+Version: 1.2.0
 Authors@R: person("Asitav ", "Sen", email = "hello@asitavsen.com",
                   role = c("aut", "cre","cph"))
 Description: Wrapper for 'Kobotoolbox' APIs ver 2 mentioned at <https://support.kobotoolbox.org/api.html>, to download data from 'Kobotoolbox' to R. Small and simple package that adds immense convenience for the data professionals using 'Kobotoolbox'.
@@ -19,7 +19,8 @@ Imports:
     openssl,
     R6,
     methods,
-    dplyr
+    dplyr,
+    readxl
 Suggests: 
     knitr,
     rmarkdown,
