--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,9 @@ importFrom(httr,stop_for_status)
 importFrom(httr,timeout)
 importFrom(httr,warn_for_status)
 importFrom(jsonlite,fromJSON)
+importFrom(purrr,map)
+importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
+importFrom(rlang,set_names)
 importFrom(utils,download.file)
 importFrom(utils,read.csv)
