--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,6 +2,9 @@ url: https://asitav-sen.github.io/KoboconnectR/
 template:
   bootstrap: 5
   bootswatch: sandstone
+  includes:
+    in_header: |
+    <script defer data-domain="asitav-sen.github.io/koboconnectr" src="https://webanal.tools.asitavsen.com/js/script.js"></script>
 footer:
   structure:
     left: developed_by
