--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,8 +3,8 @@ template:
   bootstrap: 5
   bootswatch: sandstone
   includes:
-    in_header: |
-    <script defer data-domain="asitav-sen.github.io/koboconnectr" src="https://webanal.tools.asitavsen.com/js/script.js"></script>
+    in_header: <!-- <script defer data-domain="asitav-sen.github.io/koboconnectr"
+      src="https://webanal.tools.asitavsen.com/js/script.js"></script> -->
 footer:
   structure:
     left: developed_by
