--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,10 +1,10 @@
 url: https://asitav-sen.github.io/KoboconnectR/
 template:
+  includes:
+    in_header: |
+      <script defer data-domain="asitav-sen.github.io/koboconnectr" src="https://webanal.tools.asitavsen.com/js/script.js"></script>
   bootstrap: 5
   bootswatch: sandstone
-  includes:
-    in_header: <!-- <script defer data-domain="asitav-sen.github.io/koboconnectr"
-      src="https://webanal.tools.asitavsen.com/js/script.js"></script> -->
 footer:
   structure:
     left: developed_by
