--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,17 +14,18 @@ import(dplyr)
 import(methods)
 import(mime)
 import(openssl)
-importFrom(httr,DELETE)
-importFrom(httr,GET)
-importFrom(httr,POST)
-importFrom(httr,add_headers)
-importFrom(httr,authenticate)
-importFrom(httr,content)
-importFrom(httr,message_for_status)
-importFrom(httr,progress)
-importFrom(httr,stop_for_status)
-importFrom(httr,timeout)
-importFrom(httr,warn_for_status)
+importFrom(httr2,req_auth_basic)
+importFrom(httr2,req_body_form)
+importFrom(httr2,req_method)
+importFrom(httr2,req_perform)
+importFrom(httr2,req_timeout)
+importFrom(httr2,request)
+importFrom(httr2,resp_body_html)
+importFrom(httr2,resp_body_json)
+importFrom(httr2,resp_body_raw)
+importFrom(httr2,resp_body_string)
+importFrom(httr2,resp_check_status)
+importFrom(httr2,resp_status)
 importFrom(jsonlite,fromJSON)
 importFrom(purrr,map)
 importFrom(readxl,excel_sheets)
